--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ const App = () => {
           <Home className="inline-block mr-1" size={20} /> Home
         </button>
         <button onClick={() => setCurrentPage('consultation')} className={`text-white hover:text-purple-200 transition-colors ${currentPage === 'consultation' ? 'text-purple-200 font-semibold' : ''}`}>
-          <MessageSquare className="inline-block mr-1" size={20} /> Consultation
+          <MessageSquare className="inline-block mr-1" size={20} /> ConsulTation
         </button>
         <button onClick={() => setCurrentPage('blog')} className={`text-white hover:text-purple-200 transition-colors ${currentPage === 'blog' ? 'text-purple-200 font-semibold' : ''}`}>
           <Book className="inline-block mr-1" size={20} /> Blog
